--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
   "author": "Lukas Trumm",
   "license": "MIT",
   "scripts": {
-    "css-build": "node-sass --omit-source-map-url sass/main.scss css/styles.css",
+    "serve": "browser-sync start --server --files . --no-notify --open .",
+    "css-build": "node-sass --omit-source-map-url scss/main.scss css/styles.css",
     "css-watch": "npm run css-build -- --watch",
-    "start": "npm run css-watch"
+    "start": "run-p css-watch serve"
   },
   "devDependencies": {
+    "browser-sync": "^2.26.7",
     "bulma": "^0.7.5",
-    "node-sass": "^4.12.0"
+    "node-sass": "^4.12.0",
+    "npm-run-all": "^4.1.5"
   }
 }
