--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "skaut-design",
+  "name": "@lttr/skaut-design",
   "version": "1.0.0",
   "description": "Simple design system for czech scouts",
   "main": "script.js",
@@ -16,5 +16,13 @@
     "bulma": "^0.7.5",
     "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lttr/skaut-design.git"
+  },
+  "bugs": {
+    "url": "https://github.com/lttr/skaut-design/issues"
+  },
+  "homepage": "https://lttr.github.com/skaut-design"
 }
