--- a/package.json
+++ b/package.json
@@ -1,19 +1,25 @@
 {
   "name": "@lttr/skaut-design",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "Simple design system for czech scouts",
   "main": "script.js",
   "author": "Lukas Trumm",
   "license": "MIT",
   "scripts": {
+    "sass:css": "node-sass --omit-source-map-url scss/main.scss css/skaut-design.css",
+    "optimize:css": "cleancss -o css/skaut-design.min.css css/skaut-design.css",
+    "build:css": "run-s -l sass:css optimize:css",
+    "watch:css": "npm run sass:css -- --watch",
     "serve": "browser-sync start --server --files . --no-notify --open .",
-    "css-build": "node-sass --omit-source-map-url scss/main.scss css/skaut-design.css",
-    "css-watch": "npm run css-build -- --watch",
-    "start": "run-p css-watch serve"
+    "start": "run-p sass:css serve"
+  },
+  "dependencies": {
+    "bulma": "^0.7.5"
   },
   "devDependencies": {
+    "bootstrap": "^4.3.1",
     "browser-sync": "^2.26.7",
-    "bulma": "^0.7.5",
+    "clean-css-cli": "^4.3.0",
     "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5"
   },
