--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "start": "run-p sass:css serve"
   },
   "dependencies": {
-    "bulma": "^0.7.5"
+    "bulma": "^0.7.5",
+    "bulma-extensions": "^6.2.7"
   },
   "devDependencies": {
     "browser-sync": "^2.26.7",
     "clean-css-cli": "^4.3.0",
+    "cssnano": "^4.1.10",
     "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5"
   },
